security/kyverno/policy-deployment.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-for-labels
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "label 'app.kubernetes.io/nazwa' is required"
      pattern:
        metadata:
          labels:
            app.kubernetes.io/nazwa: "?*"
